# noggit-purple

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  sr-jungle-reference.md
cmake/: FetchContentFast.cmake  FindCascLib.cmake  FindFastNoise2.cmake  FindJson.cmake  FindLua.cmake  FindSol2.cmake  FindStormLib.cmake  Findlodepng.cmake  GenerateRevision.cmake  README.md  cmake_function.cmake  revision.h.in  win32_prefind.cmake  windeployqt.cmake
noggit-rs/: Cargo.toml  README.md
noggit-rs/crates/noggit-cli/: Cargo.toml
noggit-rs/crates/noggit-cli/src/: main.rs
noggit-rs/crates/noggit-core/: Cargo.toml
noggit-rs/crates/noggit-core/src/: error.rs  lib.rs  world.rs
noggit-rs/crates/noggit-formats/: Cargo.toml
noggit-rs/crates/noggit-formats/src/: adt.rs  blp.rs  dbc.rs  error.rs  lib.rs  m2.rs  wdt.rs  wmo.rs
noggit-rs/crates/noggit-formats/tests/: adt.rs  blp.rs  dbc.rs  m2.rs  wdt.rs  wmo.rs
noggit-rs/crates/noggit-render/: Cargo.toml
noggit-rs/crates/noggit-render/src/: lib.rs
noggit-rs/crates/noggit-scripting/: Cargo.toml
noggit-rs/crates/noggit-scripting/src/: lib.rs
noggit-rs/crates/noggit-stormlib/: Cargo.toml  build.rs
noggit-rs/crates/noggit-stormlib/src/: lib.rs
noggit-rs/crates/noggit-ui/: Cargo.toml
noggit-rs/crates/noggit-ui/src/: lib.rs  main.rs
noggit-rs/crates/noggit-vfs/: Cargo.toml
noggit-rs/crates/noggit-vfs/src/: lib.rs  wow_client.rs
scripts/: build-cpp-docker.sh
src/noggit/: Action.cpp  AsyncLoader.cpp  AsyncLoader.h  ChunkWater.cpp  ChunkWater.hpp  DBC.h  DBCFile.cpp  DBCFileIO.cpp  MapChunk.cpp  MapChunk.h  MapTile.cpp  MapTile.h  MapView.cpp  MapView.h  Misc.h  Model.cpp  ModelInstance.cpp  ModelInstance.h  SceneObject.cpp  SceneObject.hpp  Selection.cpp  Sky.cpp  (+19 more)
tests/: AiProtocolTest.cpp  AsyncLoaderTest.cpp  BlueprintSnapshotTest.cpp  GroundEffectPreviewTest.cpp  MobaArenaBlueprintTest.cpp  ProceduralLayoutTest.cpp  ProceduralLiquidLayoutTest.cpp  ProceduralPropsTest.cpp  ProceduralScatterTest.cpp  ProceduralSkyboxTest.cpp
(+46 files in other folders)
