[workspace]
members = [
  "crates/noggit-cli",
  "crates/noggit-core",
  "crates/noggit-formats",
  "crates/noggit-render",
  "crates/noggit-scripting",
  "crates/noggit-stormlib",
  "crates/noggit-ui",
  "crates/noggit-vfs",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Walfhand/noggit-purple"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
