[package]
name = "noggit-stormlib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
links = "storm"

[dev-dependencies]
wow-mpq = "0.6.4"

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
