[package]
name = "noggit-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
minifb = "0.27"
noggit-core = { path = "../noggit-core" }
noggit-formats = { path = "../noggit-formats" }
noggit-render = { path = "../noggit-render" }
noggit-vfs = { path = "../noggit-vfs" }

[lints]
workspace = true
