[package]
name = "noggit-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
noggit-core = { path = "../noggit-core" }
noggit-formats = { path = "../noggit-formats" }
noggit-render = { path = "../noggit-render" }
noggit-vfs = { path = "../noggit-vfs" }
pollster = "0.3"
wgpu = "0.20"
winit = "0.29"

[lints]
workspace = true
